fix: Gatsby: Main photo resizes on mobile on keyboard open

--- a/gatsby/src/layouts/default-layout.module.scss
+++ b/gatsby/src/layouts/default-layout.module.scss
@@ -50,7 +50,7 @@
   }
 
   @include media-breakpoint-up(xs) {
-    height: 55vh !important;
+    height: 100vw !important;
   }
 
   @include media-breakpoint-up(md) {
